tests/snapshots/run_wpt_conformance__litert_reduceLogSum_float32_0D_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_log_sum.https.any.js reduceLogSum float32 0D tensor empty axes, litert
 reduce_log_sum :: reduceLogSum float32 0D tensor empty axes: index 0: actual=64.54827 expected=4.167413 ulp=33275204 tolerance=19
  inputs: reduceLogSumInput: [64.54827117919922]
  expected reduceLogSumOutput: [4.167413]
  actual reduceLogSumOutput: [64.54827]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceLogSumInput: f32[];
  }

  nodes {
    [reduceLogSumOutput] = reduceLogSum(reduceLogSumInput, axes=[], keepDimensions=false, label="");
  }

  outputs { reduceLogSumOutput; }
}
