tests/snapshots/run_wpt_conformance__litert_reduceLogSum_float32_1D_constant_tensor_all_non-negative_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_log_sum.https.any.js",
    "reduceLogSum float32 1D constant tensor all non-negative default options",
    "litert",
    "PASS",
)
