tests/snapshots/run_wpt_conformance__litert_reduceLogSum_float32_1D_constant_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_log_sum.https.any.js reduceLogSum float32 1D constant tensor empty axes, litert
 reduce_log_sum :: reduceLogSum float32 1D constant tensor empty axes: index 0: actual=64.54827 expected=4.167413 ulp=33275204 tolerance=19
  inputs: reduceLogSumInput: [64.54827117919922, 64.54827117919922] (constant)
  expected reduceLogSumOutput: [4.167413, 4.167413]
  actual reduceLogSumOutput: [64.54827, 64.54827]
  expected reduceLogSumOutput full nd:
(shape [2])
[4.167413, 4.167413]
  actual reduceLogSumOutput full nd:
(shape [2])
[64.54827, 64.54827]

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[2] @bytes([183, 24, 129, 66, 183, 24, 129, 66]);
  }

  nodes {
    [reduceLogSumOutput] = reduceLogSum(operand_0, axes=[], keepDimensions=false, label="");
  }

  outputs { reduceLogSumOutput; }
}
